<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".HomeActivity"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/MENU_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="-15dp"
                android:padding="10dp"
                android:src="@drawable/ic_menu" />

            <ImageView
                android:id="@+id/search_button"
                android:layout_width="546dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="-239dp"
                android:padding="15dp"
                android:src="@drawable/search" />


        </RelativeLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categories"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:padding="10dp"

            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"

                android:background="@drawable/black"
                android:layout_margin="20dp"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/food"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:padding="25dp"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/Resturant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#0000ffff"
                    android:padding="4dp"
                    android:text="@string/expand" />
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/food"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/Food"

                    />



            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="170dp">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/red"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="-4dp"
                        android:padding="25dp"
                        android:text="@string/fash"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                         />

                    <Button
                        android:id="@+id/Fashion_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:background="#0000ffff"
                        android:padding="8dp"
                        android:text="@string/expandFash" />

                </RelativeLayout>

                <ImageView
                    android:id="@+id/fash11"
                    android:layout_width="140dp"
                    android:layout_height="150dp"
                    android:src="@drawable/fashion" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardElevation="8dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="170dp">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/yellow"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:padding="25dp"
                        android:text="@string/photo"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/P_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:background="#0000ffff"
                        android:padding="6dp"
                        android:text="@string/expandPhoto" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="165dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/photography"
                    android:id="@+id/photo_image"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="170dp">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/blue"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="-4dp"
                        android:padding="25dp"
                        android:text="@string/archi"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:background="#0000ffff"
                        android:padding="8dp"
                        android:text="@string/expandPhoto"
                        android:id="@+id/archi_button"/>

                </RelativeLayout>

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="295dp"
                    android:src="@drawable/architecture"
                    android:id="@+id/arch"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="170dp">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/blur"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:padding="25dp"
                        android:text="@string/funThings"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/Thing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:background="#0000ffff"
                        android:padding="8dp"
                        android:text="@string/expandFun" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="185dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/fun"
                    android:id="@+id/artThingy"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>